@@ -145,7 +145,7 @@ public class TypeInferenceUtils {
                 return false;
             }
             // 2. Check it by list of patterns
-            return DatetimePatternUtils.getInstance().isDate(value);
+            return DatetimePatternManager.getInstance().isDate(value);
         }
         return false;
     }
@@ -163,7 +163,7 @@ public class TypeInferenceUtils {
                 return false;
             }
             // 2. Check it by list of patterns
-            return DatetimePatternUtils.getInstance().isTime(value);
+            return DatetimePatternManager.getInstance().isTime(value);
         }
         return false;
     }
