@@ -1,5 +1,7 @@
 V1.3.3 2015-11-4
     - change parent pom
+       2015-11-17
+    - Make it possible to add customized date and time pattern      
 
 V1.3.2 2015-10-29
     - TDQ-10903 optimize dictionaries
